--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ main{
     padding-bottom: 10px;
     width: 300px;
 }
-img{
+picture{
     width: 100%;
     border-radius: 10px 10px 0 0;
 }
@@ -108,13 +108,13 @@ button:hover{
         flex-direction: row;   
         justify-content: center;
     }
-    img{
+    picture{
      width: 250px;
     }
    /* .img-mobile{
         display: none;
     } */
-    .img-desktop{
+    picture{
         display: unset;
         border-radius: unset;
         border-radius: 10px 0 0 10px;
