--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ main{
     padding-bottom: 10px;
     width: 300px;
 }
-picture{
+source, img{
     width: 100%;
     border-radius: 10px 10px 0 0;
 }
