--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ main{
     padding-bottom: 10px;
     width: 300px;
 }
-img{
+source{
     width: 100%;
     border-radius: 10px 10px 0 0;
 }
@@ -108,7 +108,7 @@ button:hover{
         flex-direction: row;   
         justify-content: center;
     }
-    img{
+    source{
      width: 250px;
      border-radius: 10px 0 0 10px;
     }
