--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,11 @@ main{
     padding-bottom: 10px;
     width: 300px;
 }
-source{
+img{
     width: 100%;
     border-radius: 10px 10px 0 0;
 }
-/*.img-desktop{
-    display: none;
-}
-*/
+
 header{
     text-transform: uppercase;
     letter-spacing: 5px;
@@ -108,7 +105,7 @@ button:hover{
         flex-direction: row;   
         justify-content: center;
     }
-    source{
+    img{
      width: 250px;
      border-radius: 10px 0 0 10px;
     }
